variables.RunHalf.scala.error
Compilation error:
RunHalf:11: error: ';' expected but 'while' found.
  } while (baggleCount != (orangeCount+1)/2)
    ^RunHalf:16: error: 'while' expected but '}' found.
	}
        ^